--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "pscrs",
   "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "https://ionicframework.com/",
+  "author": "Mr Geek Philippines",
+  "homepage": "https://mrgeek.online",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -20,8 +20,13 @@
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
     "@capacitor/core": "2.4.6",
+    "@ionic-native/core": "^5.31.1",
+    "@ionic-native/http": "^5.31.1",
     "@ionic/angular": "^5.5.2",
+    "@ionic/storage": "^2.3.1",
+    "cordova-plugin-advanced-http": "^3.1.0",
     "rxjs": "~6.6.0",
+    "storage": "^0.2.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
@@ -50,5 +55,5 @@
     "tslint": "~6.1.0",
     "typescript": "~4.0.2"
   },
-  "description": "An Ionic project"
+  "description": "PSCRS Mobile Application"
 }
