--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
     "@capacitor/core": "2.4.6",
+    "@capacitor/ios": "^2.4.6",
     "@ionic-native/core": "^5.31.1",
     "@ionic-native/http": "^5.31.1",
     "@ionic/angular": "^5.5.2",
     "@ionic/storage": "^2.3.1",
     "cordova-plugin-advanced-http": "^3.1.0",
+    "cordova-plugin-file": "^6.0.2",
     "rxjs": "~6.6.0",
     "storage": "^0.2.0",
     "tslib": "^2.0.0",
